<resources>
    <string name="app_name">IRC Client</string>
    <string name="nick">Nick</string>
    <string name="channel">Channel</string>
    <string name="startButton">S T A R T</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Setting preferences   -->
    <string name="action_settings">Settings here</string>
    <string name="switch_theme">Turn on Dark mode</string>
    <string name="switch_detail">Switch between Dark mode and Light mode </string>
    <string name="check_notification">Turn on notification</string>
    <string name="check_detail">Get the latest notification about your channels</string>

    <string name="message_hint">Enter message</string>

    <string name="app_description"> IRC Mess is a IRC client written in Java by Android Studio.
        This client uses the IRC protocol to send plain text message through sockets.
        The application is adjusted visually to look like modern messaging tools.
    </string>
    <string name="version">Version</string>
    <string name="_1_2">1.2</string>
    <string name="release_date">Release date</string>
    <string name="_19_december_2019">19 December 2019</string>
    <string name="team_description">We are a group of university students in the University of Science and Technology of Hanoi
        who have big dreams and little bugs in our projects. This is an application for out mobile application development project</string>
    <string name="rfc_1459_rfc_2812">RFC 1459 / RFC 2812</string>
    <string name="truong_si_thi_vu">Truong Si Thi Vu</string>
    <string name="leader">Leader</string>
    <string name="praise_oketola">Praise Oketola</string>
    <string name="nguyen_trung_dung">Nguyen Trung Dung</string>
    <string name="dinh_nhu_minh_phuong">Dinh Nhu Minh Phuong</string>
    <string name="ta_duc_anh">Ta Duc Anh</string>
    <string name="enjoy_chatting">Enjoy chatting!</string>
    <string name="the_app">The App</string>
    <string name="this_is_the_setting_fragment">THIS IS THE SETTING FRAGMENT</string>
    <string name="john_doe">John Doe</string>
    <string name="hi_man_how_are_you">hi man, how are you?</string>
    <string name="channel_3">Channel 3</string>
    <string name="channel_2">Channel 2</string>
    <string name="channel_1">Channel 1</string>
    <string name="search">Search</string>
    <string name="league_of_legends_n_549854_members">League of Legends   549854 members</string>
    <string name="travian_by_doctor_son_and_students_n_12_members">Travian by Doctor Son and students   12 members</string>
    <string name="counter_strike_boiz_n_69_members">Counter Strike Boiz   69 members</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="channels">Channels</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">channel name</string>
    <string name="channel_users">Channel users</string>
    <string name="close_all_connections">Close all connections</string>
    <string name="quit">/quit</string>
    <string name="leave_channel_with_a_message">Leave channel with a message</string>
    <string name="part_message">/part message</string>
    <string name="list_channel_members">List channel members</string>
    <string name="name">/name</string>
    <string name="nick_nickname">/nick nickname</string>
    <string name="change_nickname">Change nickname</string>
    <string name="join_channel">/join #channel</string>
    <string name="join_a_channel">Join a channel</string>
    <string name="quit_a_channel_with_a_note">Quit a channel with a note</string>
    <string name="part_note">/part note</string>

</resources>
