<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_help">

    <TableLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:stretchColumns="1">
        <TableRow android:layout_marginBottom="10dp"

            android:layout_width="250dp"
            android:layout_marginTop="10dp">
            <TextView
                android:minLines="1"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="/join #channel">
            </TextView>
            <TextView
                android:minLines="1"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:text="@string/join_a_channel">
            </TextView>
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:minLines="1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="/nick smt">
            </TextView>
            <TextView
                android:minLines="1"
                android:layout_gravity="end"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/change_nickname">
            </TextView>
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:minLines="1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/name">
            </TextView>
            <TextView
                android:minLines="1"
                android:layout_gravity="end"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/list_channel_members">
            </TextView>
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:minLines="1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/part_note">
            </TextView>
            <TextView
                android:minLines="1"
                android:layout_gravity="end"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="Quit with a note">
            </TextView>
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:weightSum="100"
            android:layout_marginBottom="10dp">
            <TextView
                android:minLines="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/quit">
            </TextView>
            <TextView
                android:minLines="1"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textAlignment="viewEnd"
                android:text="@string/close_all_connections">
            </TextView>
        </TableRow>

    </TableLayout>


</android.support.constraint.ConstraintLayout>