<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutFragment">

    <TextView
        android:id="@+id/aboutus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="About us"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/aboutus"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/icon">

    </ImageView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25">

    </android.support.constraint.Guideline>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_description"
        android:id="@+id/teamDescription"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        android:gravity="center_vertical"
        android:layout_marginTop="0dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:textSize="17sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black">
    </android.support.v7.widget.AppCompatTextView>


    <TableLayout
        android:id="@+id/teamMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@id/theapp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teamDescription">

        <TableRow>
            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/truong_si_thi_vu"
                android:textColor="@color/black"
                android:textSize="17sp"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/praise_oketola"
                android:textColor="@color/black"
                android:textSize="17sp"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/nguyen_trung_dung"
                android:textColor="@color/black"
                android:textSize="17sp"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/dinh_nhu_minh_phuong"
                android:textColor="@color/black"
                android:textSize="17sp"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/ta_duc_anh"
                android:textColor="@color/black"
                android:textSize="17sp"/>
        </TableRow>
    </TableLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/theapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/the_app"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:textSize="50sp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teamMembers"
        app:layout_constraintVertical_bias="0.086">

    </android.support.v7.widget.AppCompatTextView>

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        app:layout_constraintTop_toBottomOf="@id/theapp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:textSize="17sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black">
    </TextView>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/enjoy_chatting"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/appDescription"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>
</ScrollView>