<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="100dp"
    tools:context=".LogInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="C H A T U S "
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/nick"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/nick"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNick"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_edit_text_box"
        android:inputType="text"
        android:textColor="@color/white"
        android:padding="10dp" />

    <TextView
        android:id="@+id/channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/channel"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etChannel"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_edit_text_box"
        android:inputType="text"
        android:textColor="@color/white"
        android:padding="10dp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:background="@drawable/gradient_button"
        android:text="@string/startButton"
        android:textColor="@color/white" />

</LinearLayout>