<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChannelFragment"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/sonboy" />

        <TextView
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="70dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="Mobile App Development \n 53 members"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:layout_margin="10dp"
        android:paddingBottom="8dp">

        <ImageView
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/lol" />

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/league_of_legends_n_549854_members"
            android:textColor="@android:color/black"
            android:textSize="50px" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/dota" />

        <TextView
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="70dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="Dota 2 Pro group \n 10 members"
            android:textColor="@android:color/black"
            android:textSize="50px" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/travian" />

        <TextView
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="70dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/travian_by_doctor_son_and_students_n_12_members"
            android:textColor="@android:color/black"
            android:textSize="50px" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/csgo" />

        <TextView
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="70dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/counter_strike_boiz_n_69_members"
            android:textColor="@android:color/black"
            android:textSize="50px" />

    </LinearLayout>


</LinearLayout>